@@ -27,10 +27,8 @@ import com.netflix.spinnaker.orca.clouddriver.OortService;
 import com.netflix.spinnaker.orca.clouddriver.tasks.image.ImageFinder;
 import java.util.Collection;
 import java.util.HashMap;
-import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Component;
 
@@ -46,7 +44,6 @@ public class EcsImageFinder implements ImageFinder {
       String packageName,
       Map<String, String> tags,
       List<String> warningsCollector) {
-    StageData stageData = (StageData) stage.mapTo(StageData.class);
 
     List<Map> result =
         Retrofit2SyncCall.execute(
@@ -55,16 +52,15 @@ public class EcsImageFinder implements ImageFinder {
                 (String) stage.getContext().get("imageLabelOrSha"),
                 null,
                 null,
-                null));
+                Map.of()));
 
     List<EcsImage> allMatchedImages =
         result.stream()
             .map(image -> objectMapper.convertValue(image, EcsImage.class))
             .sorted()
-            .collect(Collectors.toList());
+            .toList();
 
-    HashSet<ImageDetails> response = Sets.newHashSet(allMatchedImages.get(0).toImageDetails());
-    return response;
+    return Sets.newHashSet(allMatchedImages.get(0).toImageDetails());
   }
 
   @Override
